mdapioutput/objects/Bar__c.object
<CustomObject>
    <label>Bar</label>
    <nameField>
        <label>Bar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Bar_s_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bar&#39;s Parent</label>
        <referenceTo>Bar_s_Parent__c</referenceTo>
        <relationshipLabel>Bars</relationshipLabel>
        <relationshipName>Bars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Field__c</fullName>
        <label>First Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>